--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -1,11 +1,40 @@
-</body>
-
-<footer class="footer">
-  <div>
-      <h4>&copy Copyright 2021  <br><a href="https://grcsdevelopersclub.tech/">GRC's Developers Club</a></h4>
+<hr>
+<footer class="colored-section" id="footer">
+  <div class="container-fluid footer-item">
+      <div class="row">
+          <div class="col-lg-3 col-md-3 col-sm-3">
+              <h6>Resources</h6>
+              <hr>
+              <p>We have resources for your learning needs at your disposal, register at our portal and get the benifits of high quality PDF Formatted Notes, Books and more.</p>
+          </div>
+          <div class="col-lg-3 col-md-3 col-sm-3">
+              <h6>Support</h6>
+              <hr>
+              <p>Get Support for any query by contacting us on our social media portals or by email by clicking <a href="mailto:grcsdevelopersclub@gmail.com" target="_blank">Here!</a> </p>
+          </div>
+          <div class="col-lg-3 col-md-3 col-sm-3">
+              <h6>Privacy Policy</h6>
+              <hr>
+              <p>Privacy policies are available <a href="https://grcsdevelopersclub.tech/privacy-policy" target="_blank">Here!</a></p>
+              <p>You can read terms and condition <a href="https://grcsdevelopersclub.tech/terms-and-condition" target="_blank">Here!</a></p>
+          </div>
+          <div class="col-lg-3 col-md-3 col-sm-3">
+              <h6>Contact Us</h6>
+              <hr>
+              <p>Various ways you can <a href="https://grcsdevelopersclub.tech/contact-us" target="_blank">contact us</a></p>
+          </div>
+      </div>
+      <hr>
   </div>
 
+  <div class="container-fluid">
+      <div style="text-align: center;"><i class="footer-icon fab fa-twitter"></i>
+      <i class="footer-icon fab fa-facebook-f"></i>
+      <a href="https://www.instagram.com/grcsdevelopersclub/" target="_blank"><i class="footer-icon fab fa-instagram"></i></a>
+      <a href="mailto:grcsdevelopersclub@gmail.com" target="_blank"><i class="footer-icon fas fa-envelope"></i></a></div>
+      <p class="footer-icon">© Copyright 2020 GRC's Developers Club</p>
+  </div>
 </footer>
-
+</body>
 
 </html>
